--- a/BloodBankMVC/Views/Shared/Success1.cshtml
+++ b/BloodBankMVC/Views/Shared/Success1.cshtml
@@ -7,12 +7,13 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Success</title>
+    <title>Success1</title>
 </head>
 <body>
     <hgroup>
         <h1>Success.</h1>
-        <h2>Thanks for taking initiative to donate Blood.................</h2>
+        <h2>Deleted Successfully.................</h2>
     </hgroup>
 </body>
 </html>
+
