--- a/BloodBankMVC/Views/BloodBank/AddDonars.cshtml
+++ b/BloodBankMVC/Views/BloodBank/AddDonars.cshtml
@@ -1,4 +1,4 @@
-﻿@model BloodBankMVCAPP.Models.AddDonar
+﻿@model BloodBankMVCAPP.Models.AddDonarModel
 
 @{
     ViewBag.Title = "AddDonars";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>BloodBankModel</h4>
+        <h4>AddDonarModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
