--- a/BloodBankMVC/Views/BloodBank/AddDonars.cshtml
+++ b/BloodBankMVC/Views/BloodBank/AddDonars.cshtml
@@ -52,6 +52,10 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.GENDER, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.GENDER, "", new { @class = "text-danger" })
+               Male:@Html.RadioButton("Gender", "Male")
+                Female:@Html.RadioButton("Gender", "Female")
+                Others:@Html.RadioButton("Gender", "Others")
+
             </div>
         </div>
 
