--- a/BloodBankMVC/Views/Home/About.cshtml
+++ b/BloodBankMVC/Views/Home/About.cshtml
@@ -4,4 +4,14 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    Welcome to our Blood bank. Donate blood and save a life.
+    Blood is the most essential thing for human life.
+    It is an inhuman body fluid that delivers necessary substances such as nutrients and oxygen to the cells.
+    Technically, blood is a transport liquid pumped by the heart (or an equivalent structure) to all parts of the body,
+    after which it is returned to the heart to repeat the process.
+    To donate blood or platelets, you must be in good general health, weigh at least 110 pounds, and be at least 16 years old.
+    Parental consent is required for blood donation by 16-year-olds; 16-year-olds are NOT eligible to donate platelets. 
+    Blood brings oxygen and nutrients to all the parts of the body so they can keep working. Blood carries carbon dioxide and other waste materials 
+    to the lungs, kidneys, and digestive system to be removed from the body. Blood also fights infections and carries hormones around the body.
+</p>
