--- a/BloodBankMVC/Content/Site.css
+++ b/BloodBankMVC/Content/Site.css
@@ -1,6 +1,16 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+
+}
+
+body {
+    background: #54555c url(Images/OIP.jfif) repeat-x top;
+    font-size: 12pt;
+    font-family: Trebuchet MS;
+    margin: 0;
+    padding: 0;
+    color: #323343;
 }
 
 /* Set padding to keep content from hitting the edges */
