--- a/BloodBankMVC/Views/Home/Index.cshtml
+++ b/BloodBankMVC/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>BLOOD BANK</h1>
+    <h1 style="color:red;">BLOOD BANK</h1>
     <p class="lead">Donate Blood And Save Life.....</p>
     
     <p><a href="http://localhost:65115/user/users" class="btn btn-danger btn-lg">Search Blood &raquo;</a></p>
@@ -15,7 +15,7 @@
         <p>
             Admin can regiter details of donars to donate Blood....
         </p>
-        <p><a class="btn btn-default" href="http://localhost:65115/AdminLogin/AdminLogin">Login &raquo;</a></p>
+        <p><a class="btn btn-primary" href="http://localhost:65115/AdminLogin/AdminLogin">Login &raquo;</a></p>
     </div>
     
 </div>
