--- a/BloodBankMVC/Views/Shared/LoginSuccess.cshtml
+++ b/BloodBankMVC/Views/Shared/LoginSuccess.cshtml
@@ -19,7 +19,7 @@
         <div class="col-md-4">
             <h2>Add Donar</h2>
             <p>
-                Add Donar by adding all the Detals...
+                Add Donar by adding all the Details...
             </p>
             <p><a class="btn btn-primary" href="http://localhost:65115/BloodBank/AddDonars">Add Donar &raquo;</a></p>
         </div>
@@ -31,7 +31,7 @@
         <div class="col-md-4">
             <h2>Delete Donar</h2>
             <p>
-                Delete Donar by Giving DonarID...
+                Delete Donar by giving DonarID...
             </p>
             <p><a class="btn btn-primary" href="http://localhost:65115/Delete/Delete_Donar">Delete &raquo;</a></p>
         </div>
@@ -40,7 +40,7 @@
             <div class="col-md-4">
                 <h2>Update Donar Details</h2>
                 <p>
-                    Update Donar by Selectiong perticular Donar ID...
+                    Update Donar by Selecting particular Donar ID...
                 </p>
                 <p><a class="btn btn-primary" href="http://localhost:65115/UpdateDonar/Update">Update &raquo;</a></p>
         </div>
@@ -48,7 +48,7 @@
             <div class="col-md-4">
                 <h2>View donars details.. </h2>>
                 <p>
-                    View available blood in our Bank and search required bood by Blood group..
+                    View available blood in our Bank and search required blood by Blood group..
                 </p>
                 <p><a class="btn btn-primary" href="http://localhost:65115/Search/Search">View and search &raquo;</a></p>
             </div>
