--- a/BloodBankMVC/Views/Shared/Success1.cshtml
+++ b/BloodBankMVC/Views/Shared/Success1.cshtml
@@ -12,7 +12,7 @@
 <body>
     <hgroup>
         <h1>Success.</h1>
-        <h2>Deleted Successfully.................</h2>
+        <h2>Donar Deleted Successfully.................</h2>
     </hgroup>
 </body>
 </html>
