--- a/BloodBankMVC/Views/Shared/UpdateDonarSuccess.cshtml
+++ b/BloodBankMVC/Views/Shared/UpdateDonarSuccess.cshtml
@@ -12,7 +12,7 @@
 <body>
     <hgroup>
         <h1>Success.</h1>
-        <h2>Update Successfully.................</h2>
+        <h2>Donar Updated Successfully.................</h2>
     </hgroup>
 </body>
 </html>
