--- a/BloodBankMVC/Views/Shared/UserError.cshtml
+++ b/BloodBankMVC/Views/Shared/UserError.cshtml
@@ -7,7 +7,7 @@
 <body>
     <hgroup>
         <h1>Error.</h1>
-        <h2>Sorry We are unavailble with this BloodGroup....</h2>
+        <h2>Oops Sorry.. The Blood Group is not available!....</h2>
      
     </hgroup>
 </body>
