--- a/BloodBankMVC/Views/Shared/UserSuccess.cshtml
+++ b/BloodBankMVC/Views/Shared/UserSuccess.cshtml
@@ -12,13 +12,13 @@
 <body>
     <hgroup>
         <h1>Success.</h1>
-        <h2>Availabe Blood in our Blood Bank.................</h2>
+        <h2>This blood group is Availabe in our Blood Bank.................</h2>
     </hgroup>
     <div class="row">
         <div class="col-md-4">
-            <h2>View donars details.. </h2>>
+            <h2>View donars details.. </h2>
             <p>
-                View available blood in our Bank and search required bood by Blood group..
+                View available blood in our Bank and search required blood by giving Blood group..
             </p>
             <p><a class="btn btn-primary" href="http://localhost:65115/Search/Search">View and search &raquo;</a></p>
         </div>
