--- a/BloodBankMVC/Views/Shared/Success.cshtml
+++ b/BloodBankMVC/Views/Shared/Success.cshtml
@@ -12,7 +12,7 @@
 <body>
     <hgroup>
         <h1>Success.</h1>
-        <h2>Thanks for taking initiative to donate Blood.................</h2>
+        <h2>Great Job! Thankyou for your initiative to donate Blood.................</h2>
     </hgroup>
 </body>
 </html>
