--- a/BloodBankMVC/Views/Shared/AdddonarError.cshtml
+++ b/BloodBankMVC/Views/Shared/AdddonarError.cshtml
@@ -2,13 +2,12 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error with Update</title>
+    <title>Error</title>
 </head>
 <body>
     <hgroup>
        
-        <h2>Donar ID is not existing.</h2>
-
+        <h2>An error occurred while processing your request.</h2>
     </hgroup>
 </body>
-</htm
+</html>
