--- a/BloodBankMVC/Views/Shared/DeleteError.cshtml
+++ b/BloodBankMVC/Views/Shared/DeleteError.cshtml
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>Error1  </title>
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        
+        <h3>Please enter a valid DonarId which exists in the database!</h3>
     </hgroup>
 </body>
 </html>
